// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en ProductImage Debe mostrar el componente con imagen 1`] = `
<img
  alt="cofee mug"
  className="productImg undefined"
  src="https://picsum.photos/100"
/>
`;

exports[`Pruebas en ProductImage Debe mostrar el componente con imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="cofee mug"
    className="productImg undefined"
    src="public/coffee-mug.png"
  />
</div>
`;
